--- a/app/views/users/update.html.haml
+++ b/app/views/users/update.html.haml
@@ -1,7 +1,7 @@
-= @user.name
-= @user.email
-= @user.image
-= @user.group
+= current_user.name
+= current_user.email
+= current_user.image
+= current_user.group
 
 =link_to "/" do
   トップへ
