--- a/app/views/messages/_sidebar.html.haml
+++ b/app/views/messages/_sidebar.html.haml
@@ -2,7 +2,7 @@
   .messageSidebar
     .messageSidebar__header
       .sidebarHeader
-        .sidebarHeader__roomName
+        .sidebarHeader__userName
           = current_user.name
         = link_to "#", class: "sidebarHeader__createRoom" do
           = fa_icon 'edit', class: 'icon fa-lg'
