--- a/app/assets/stylesheets/modules/_MessageIndex-Main.scss
+++ b/app/assets/stylesheets/modules/_MessageIndex-Main.scss
@@ -18,16 +18,23 @@
       &__roomInfo {
           width: 950px;
         &-roomName {
-          margin: 20px 30px 15px;
-          font-size: 25px;
+          margin: 20px 0 0 40px;
+          font-size: 40px;
+          font-weight: bold;
           color: navy;
           font-family: Comic Sans MS;
         }
         &-member {
-          margin-left: 30px;
+          margin-left: 35px;
           color: $text-gray;
           overflow: scroll;
           height: 30px;
+          font-size: 16px;
+          font-family: Comic Sans MS;
+          &Name {
+            font-size: 14px;
+            font-family: "Comic Sans MS", "YuKyokasho";
+          }
         }
       }
       &__editBtn {
@@ -35,11 +42,12 @@
         height: 60px;
         border: 2px solid $btn-blue;
         margin: 25px 40px;
-        line-height: 60px;
+        line-height: 70px;
         text-align: center;
         text-decoration: none;
         color: $btn-blue;
         border-radius: 50%;
+        font-family: fantasy;
       }
     }
   }
@@ -51,15 +59,17 @@
       .chatBody {
         padding: 20px 30px 0;
         min-height: 80px;
-        &__title {
-          font-size: 16px;
+        &__name {
+          font-size: 18px;
           font-weight: bold;
           color: $text-gray;
+          font-family: "Comic Sans MS", "YuKyokasho";
         }
         &__time {
-          margin-left: 10px;
+          margin-left: 5px;
           font-size: 12px;
           font-weight: normal;
+          font-family: MS PGothic;
         }
         &__text {
           font-size: 16px;
@@ -87,7 +97,7 @@
       }
       .fa-3x {
         position: absolute;
-        top: 23px;
+        top: 24px;
         right: 500px;
         color: lighten($btn-blue, 10%);
       }
@@ -101,6 +111,7 @@
         cursor: pointer;
         // box-shadow: 1px 3px 1px blue;
         border: none;
+        font-family: Comic Sans MS;
       }
     }
   }
