--- a/app/views/messages/_sidebar.html.haml
+++ b/app/views/messages/_sidebar.html.haml
@@ -4,7 +4,7 @@
       .sidebarHeader
         .sidebarHeader__userName
           = current_user.name
-        = link_to "#", class: "sidebarHeader__createRoom" do
+        = link_to new_group_path, class: "sidebarHeader__createRoom" do
           = fa_icon 'edit', class: 'icon fa-lg'
         = link_to edit_user_registration_path, class: "sidebarHeader__editAccount" do
           = fa_icon 'cog', class: 'icon fa-lg'
