Usersテーブルgroupカラムの名前をhelloに変更

--- a/app/views/users/update.html.haml
+++ b/app/views/users/update.html.haml
@@ -1,7 +1,7 @@
 = current_user.name
 = current_user.email
 = current_user.image
-= current_user.group
+= current_user.hello
 
 =link_to "/" do
   トップへ
