--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -3,6 +3,6 @@
   = f.text_field :name
   = f.email_field :email
   = f.text_field :image
-  = f.select :group, User.groups.keys
+  = f.select :hello, User.hellos.keys
 
   = f.submit
