--- a/app/views/messages/_sidebar.html.haml
+++ b/app/views/messages/_sidebar.html.haml
@@ -12,7 +12,7 @@
           = fa_icon 'cog', class: 'icon fa-lg'
     .messageSidebar__main
       .chatRooms
-        - @groups.each do |group|
+        - current_user.groups.each do |group|
           .chatRoom
             .chatRoom__roomName
               = group.name
