カリキュラムからmessages#index関連のビューファイルを追加

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,4 +6,6 @@
 @import "modules/MessageIndex-Main";
 @import "modules/MessageIndex-Sidebar";
 @import "modules/group";
+@import "modules/side_bar";
+@import "modules/chat";
 
