--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -2,3 +2,12 @@ $back-gray: #eee;
 $text-gray: darken($back-gray, 50%);
 $btn-blue: #38aef0;
 $back-navy: #253141;
+
+// 借り物
+$white: #fff;
+$side_blue_dark: #253141;
+$side_blue_light: #2f3e51;
+$light_blue: #38AEF0;
+$light_gray: #999;
+$black: #434a54;
+$alert_orange: #F35500;
