--- a/app/assets/stylesheets/modules/_MessageIndex-Main.scss
+++ b/app/assets/stylesheets/modules/_MessageIndex-Main.scss
@@ -22,8 +22,8 @@ body {
       &__roomInfo {
           width: 950px;
         &-roomName {
-          margin: 20px 0 0 40px;
-          font-size: 40px;
+          margin: 10px 0 5px 40px;
+          font-size: 45px;
           font-weight: bold;
           color: navy;
         }
