--- a/app/views/groups/edit.html.haml
+++ b/app/views/groups/edit.html.haml
@@ -1,3 +1,7 @@
 .chat-group-form
-  %h1 チャットグループ編集
+  %h1
+    チャットグループ編集
+    %span
+      =link_to "削除", group_path(@group), method: :delete
   = render partial: 'form', locals: { group: @group }
+
