ウェブ経由での画像表示のための「image_tag」

--- a/app/views/users/update.html.haml
+++ b/app/views/users/update.html.haml
@@ -1,6 +1,6 @@
 = current_user.name
 = current_user.email
-= current_user.image
+= image_tag current_user.image
 = current_user.hello
 
 =link_to "/" do
