--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -21,9 +21,9 @@
               %h4.chatBody__name
                 = current_user.name
                 %span.chatBody__time
-                  = DateTime.now.strftime("%Y-%m-%d %H:%M")
+                  = message.created_at.strftime("%Y-%m-%d %H:%M")
               .chatBody__text
-                = message
+                = message.text
       %footer.chatRoom__footer
         .formArea
           = form_for [@group, @message] do |f|
@@ -33,8 +33,9 @@
               = f.file_field :image, class: 'formArea__file'
             = f.submit 'Send', class: 'formArea__btn'
 
-            / = text_field_tag "#", "",class: "formArea__input", placeholder: "type a message"
-            / %label
-            /   = file_field_tag "#", class: "formArea__file"
-            /   = fa_icon 'picture-o', class: 'icon fa-3x'
-            / = submit_tag "Send", class: "formArea__btn"
+/form_for入れる前の記述
+/ = text_field_tag "#", "",class: "formArea__input", placeholder: "type a message"
+/ %label
+/   = file_field_tag "#", class: "formArea__file"
+/   = fa_icon 'picture-o', class: 'icon fa-3x'
+/ = submit_tag "Send", class: "formArea__btn"
