--- a/app/assets/stylesheets/modules/_MessageIndex-Main.scss
+++ b/app/assets/stylesheets/modules/_MessageIndex-Main.scss
@@ -58,6 +58,7 @@ body {
     height: 100vh - 12vh;
     overflow: scroll;
     .chatBodies {
+      margin-top: 110px;
       .chatBody {
         padding: 20px 30px 0;
         min-height: 80px;
