--- a/app/views/messages/_sidebar.html.haml
+++ b/app/views/messages/_sidebar.html.haml
@@ -18,4 +18,4 @@
               .chatRoom__roomName
                 = group.name
               .chatRoom__latestMessage
-                メッセージはまだありません。
+                = group.messages.last&.text
