--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -19,7 +19,7 @@
           - @messages.each do |message|
             .chatBody
               %h4.chatBody__name
-                = current_user.name
+                = message.user.name
                 %span.chatBody__time
                   = message.created_at.strftime("%Y-%m-%d %H:%M")
               .chatBody__text
