所属グループ(hello)の表示

--- a/app/assets/stylesheets/modules/_MessageIndex-Main.scss
+++ b/app/assets/stylesheets/modules/_MessageIndex-Main.scss
@@ -67,8 +67,10 @@ body {
           font-weight: bold;
           color: $text-gray;
         }
+        &__belongsTo {
+          font-size: 11px;
+        }
         &__time {
-          margin-left: 5px;
           font-size: 12px;
           font-weight: normal;
           font-family: MS PGothic;
