--- a/app/assets/stylesheets/modules/_MessageIndex-Main.scss
+++ b/app/assets/stylesheets/modules/_MessageIndex-Main.scss
@@ -75,6 +75,9 @@ body {
           font-weight: normal;
           font-family: MS PGothic;
         }
+        &__delete {
+          font-size: 12px;
+        }
         &__text {
           font-size: 16px;
           margin-top: 5px;
