--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -20,8 +20,11 @@
             .chatBody
               %h4.chatBody__name
                 = message.user.name
-                / %span.chatBody__belongsTo= "[#{message.user.hello}]"
+                %span.chatBody__belongsTo= "[#{message.user.hello}]"
                 %span.chatBody__time= message.created_at.strftime("%Y-%m-%d %H:%M")
+                %span.chatBody__delete
+                  = link_to group_message_path(@group, message), method: :delete do
+                    x
               .chatBody__text
                 = message.text
               .chatBody__imgage
