ルームの最新メッセージ表示のメソッドをモデルに定義してビューで呼び出し

--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -16,4 +16,5 @@
           .group__name
             = group.name
           .group__message
-            = group.messages.last&.text
+            = group.show_last_message
+            / = group.messages.last&.text
