--- a/app/views/messages/_sidebar.html.haml
+++ b/app/views/messages/_sidebar.html.haml
@@ -12,7 +12,7 @@
           = fa_icon 'cog', class: 'icon fa-lg'
     .messageSidebar__main
       .chatRooms
-        - current_user.groups.each do |group|
+        - @your_groups.each do |group|
           .chatRoom
             = link_to group_messages_path(group), class: "chatRoom" do
               .chatRoom__roomName
