チャット投稿機能非同期化

--- a/app/assets/stylesheets/modules/_MessageIndex-Sidebar.scss
+++ b/app/assets/stylesheets/modules/_MessageIndex-Sidebar.scss
@@ -1,7 +1,7 @@
 .messageIndex {
   &__sidebar {
     width: 350px;
-    height: 100vh;
+    min-height: 100vh;
     background: $back-navy;
     color: white;
     overflow: scroll;
