他ブラウザに対応するためのpositiion指定へのvh使用

--- a/app/assets/stylesheets/modules/_MessageIndex-Main.scss
+++ b/app/assets/stylesheets/modules/_MessageIndex-Main.scss
@@ -102,7 +102,7 @@ body {
     height: 110px;
     background: darken($back-gray, 5%);
     position: fixed;
-    top: 700px;
+    top: 100vh-10;
     width: 100%;
     .formArea {
       padding: 20px 15px;
