チャットの自動更新機能

--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,4 +1,4 @@
-.chatBody
+.chatBody{data: {id: message.id}}
   %h4.chatBody__name
     = message.user.name
     %span.chatBody__belongsTo= "[#{message.user.hello}]"
