--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,9 +3,9 @@
 @import "config/colors";
 @import "font-awesome";
 // modules
-@import "modules/MessageIndex-Main";
-@import "modules/MessageIndex-Sidebar";
+@import "modules/messageIndex-Main";
+@import "modules/messageIndex-Sidebar";
 @import "modules/group";
 @import "modules/side_bar";
 @import "modules/chat";
-
+@import "modules/homeTop";
