--- a/app/views/home/top.html.haml
+++ b/app/views/home/top.html.haml
@@ -6,4 +6,4 @@
       .homeTopMainWrapperTitle
         ChatRoom
       .homeTopMainWrapperDirection
-        ← ← ← 好きな部屋に入ってみよう
+        ← ← ← 好きな部屋に入ってね
