--- a/app/views/home/top.html.haml
+++ b/app/views/home/top.html.haml
@@ -5,5 +5,5 @@
     .homeTopMainWrapper
       .homeTopMainWrapperTitle
         ChatRoom
-      .homeTopMainWrapperDirection
+      .homeTopMainWrapperDirection.hidden
         ← ← ← 好きな部屋に入ってね
