--- a/app/assets/stylesheets/modules/_homeTop.scss
+++ b/app/assets/stylesheets/modules/_homeTop.scss
@@ -21,11 +21,11 @@
         font-family: Tsukushi A Round Gothic;
         color: lightgray;
         box-shadow:2px 1px 10px 0px #e665aa;
-        text-shadow: 2px 2px 3px #e665aa;
+        text-shadow: 2px 2px 10px #e665aa;
         user-select: none;
       }
       &Direction.hidden {
-        transform: translate(-800px , -500px);
+        transform: translate(-400px , -500px);
       }
     }
   }
@@ -33,12 +33,11 @@
 
 .homeTopMainWrapperDirection {
   position: fixed;
-  top: 140px;
-  left: 0;
-  right: 0;
+  top: 130px;
+  left: 450px;
   margin: auto;
   font-family: Tsukushi A Round Gothic;
-  transition-duration: 1s;
+  transition-duration: .8s;
   z-index: 2;
   margin-top: 50px;
   font-size: 30px;
