--- a/app/assets/stylesheets/modules/_MessageIndex-Main.scss
+++ b/app/assets/stylesheets/modules/_MessageIndex-Main.scss
@@ -65,6 +65,7 @@ body {
         font-family: fantasy;
         font-size: 20px;
         cursor: pointer;
+        user-select: none;
       }
     }
   }
