--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -10,7 +10,7 @@
         = link_to edit_user_path(current_user) do
           = fa_icon 'cog', class: 'icon'
   .groups
-    - Group.all.each do |group|
+    - Group.all.order('updated_at DESC').each do |group|
       .group
         = link_to group_messages_path(group) do
           .group__name
